<resources>
    <string name="app_name">点餐系统</string>
    <string name="home">首页</string>
    <string name="cart">购物车</string>
    <string name="order">订单</string>
    <string name="featured_dish">特色推荐</string>
    <string name="set_meal">超值套餐</string>
    <string name="add_cart">加入购物车</string>
    <string name="settle">去结算</string>
    <string name="clear_cart">清空购物车</string>
    <string name="select_coupon">选择优惠券</string>
    <string name="total_price">合计</string>
    <string name="discount">优惠</string>
    <string name="final_price">实付</string>
    <string name="empty_cart">购物车是空的</string>
    <string name="remark">订单备注</string>
    <string name="submit_order">提交订单</string>
    <string name="order_success">下单成功</string>
    <string name="order_fail">下单失败</string>
    <string name="order_detail">订单详情</string>
    <string name="order_remark">订单备注</string>
    <string name="remark_hint">请输入备注信息（选填）</string>
</resources>